deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-container
        image: rockodilu/fastapi:latest
        ports:
        - containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    kubernetes.io/spec.ingressClassName: "nginx"
spec:
  tls:
    - hosts:
        - example.com
      secretName: testsecret-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /terms
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
      - path: /definitions
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000        
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
