deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-container
        image: fastapi:latest
        ports:
        - containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /terms
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 8000
      - path: /definitions
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 8000        
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: fastapi
